--- a/src/Trace/views/statistical/gaintrace/index.html
+++ b/src/Trace/views/statistical/gaintrace/index.html
@@ -5,15 +5,12 @@
 
                 <li>
                     <i class="fa fa-hand-o-right"></i>
-                    <a href="#">积分商城管理</a>
+                    <a href="#">游记获得记录</a>
                 </li>
             </ul>
         </div>
         <div class="col-xs-4 right">
             <ul class="page-breadcrumb" style="float: right">
-                <li>
-                    <button class="btn btn-sm blue" ng-click="vm.add()"><i class="fa fa-plus"></i> 添加</button>
-                </li>
                 <li>
                     <button class="btn btn-sm blue" ng-click="vm.export()"><i class="fa fa-plus"></i> 导出</button>
                 </li>
@@ -26,7 +23,7 @@
         <div class="row">
             <div class="col-xs-3">
                 <div class="form-group form-md-line-input">
-                    <label class="col-md-4 control-label">状态</label>
+                    <label class="col-md-4 control-label">类别</label>
                     <div class="col-md-8">
                         <select ng-model="vm.table.filter.status"
                                 class="form-control edited" ui-validate="'$value>0'"
@@ -37,7 +34,7 @@
             </div>
             <div class="col-xs-3">
                 <div class="form-group form-md-line-input">
-                    <label class="col-md-4 control-label">类型</label>
+                    <label class="col-md-4 control-label">地区</label>
                     <div class="col-md-8">
                         <select ng-model="vm.table.filter.cate" class="form-control edited" ui-validate="'$value>0'"
                                 ng-class="{'edited':vm.table.filter.cate>0}" ng-options="m.id as m.name for m in vm.filter.cates"></select>
@@ -45,7 +42,17 @@
                     </div>
                 </div>
             </div>
-            <div class="col-xs-5">
+            <div class="col-xs-2">
+                <div class="form-group form-md-line-input">
+                    <label class="col-md-4 control-label">景区</label>
+                    <div class="col-md-8">
+                        <select ng-model="vm.table.filter.cate" class="form-control edited" ui-validate="'$value>0'"
+                                ng-class="{'edited':vm.table.filter.cate>0}" ng-options="m.id as m.name for m in vm.filter.cates"></select>
+                        <div class="form-control-focus"> </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-4">
                 <div class="form-group form-md-line-input has-info">
                     <div class="input-group input-group-sm">
                         <div class="input-group-control">
@@ -63,13 +70,11 @@
             <table st-table="vm.table.rows" class="table table-striped">
                 <thead>
                     <tr>
-                        <th st-sort="a">攻略名称</th>
-                        <th>创建时间</th>
-                        <th>兑换积分</th>
-                        <th>库存</th>
-                        <th>类型</th>
-                        <th>状态</th>
-                        <th>操作</th>
+                        <th st-sort="a">游记名称</th>
+                        <th>签到人次/签到时间</th>
+                        <th>类别</th>
+                        <th>地区</th>
+                        <th>景区</th>
                     </tr>
                 </thead>
                 <tbody>
