--- a/src/Trace/views/statistical/overview/index.html
+++ b/src/Trace/views/statistical/overview/index.html
@@ -2,10 +2,9 @@
     <div class="page-bar">
         <div class="col-xs-8">
             <ul class="page-breadcrumb">
-
                 <li>
                     <i class="fa fa-hand-o-right"></i>
-                    <a href="#">统计管理</a>
+                    <a href="#">购买记录-扫描</a>
                 </li>
             </ul>
         </div>
@@ -21,56 +20,22 @@
         <div class="row">
             <div class="col-xs-2">
                 <div class="form-group form-md-line-input">
-                    <label class="col-md-4 control-label">类别</label>
-                    <div class="col-md-8">
-                        <select ng-model="vm.table.filter.status"
-                                class="form-control edited" ui-validate="'$value>0'"
-                                ng-class="{'edited':vm.table.filter.status>0}" ng-options="m.id as m.name for m in vm.filter.states"></select>
-                        <div class="form-control-focus"> </div>
-                    </div>
-                </div>
-            </div>
-          
-            <div class="col-xs-2">
-                <div class="form-group form-md-line-input">
-                    <label class="col-md-4 control-label">地区</label>
-                    <div class="col-md-8">
-                        <select ng-model="vm.table.filter.status"
-                                class="form-control edited" ui-validate="'$value>0'"
-                                ng-class="{'edited':vm.table.filter.status>0}" ng-options="m.id as m.name for m in vm.filter.states"></select>
-                        <div class="form-control-focus"> </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-xs-2">
-                <div class="form-group form-md-line-input">
-                    <label class="col-md-4 control-label">景区</label>
-                    <div class="col-md-8">
-                        <select ng-model="vm.table.filter.status"
-                                class="form-control edited" ui-validate="'$value>0'"
-                                ng-class="{'edited':vm.table.filter.status>0}" ng-options="m.id as m.name for m in vm.filter.states"></select>
-                        <div class="form-control-focus"> </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-xs-2">
-                <div class="form-group form-md-line-input">
                     <label class="col-md-4 control-label">省</label>
                     <div class="col-md-8">
-                        <select ng-model="vm.table.filter.status"
-                                class="form-control edited" ui-validate="'$value>0'"
-                                ng-class="{'edited':vm.table.filter.status>0}" ng-options="m.id as m.name for m in vm.filter.states"></select>
+                        <select ng-model="vm.table.filter.prov"
+                                class="form-control edited" ui-validate="'$value>0'" ng-change="vm.address.change()"
+                                ng-class="{'edited':vm.table.filter.prov>0}" ng-options="m.id as m.name for m in vm.address.prov"></select>
                         <div class="form-control-focus"> </div>
                     </div>
                 </div>
-            </div> 
+            </div>
             <div class="col-xs-2">
                 <div class="form-group form-md-line-input">
                     <label class="col-md-4 control-label">市</label>
                     <div class="col-md-8">
-                        <select ng-model="vm.table.filter.status"
+                        <select ng-model="vm.table.filter.city"
                                 class="form-control edited" ui-validate="'$value>0'"
-                                ng-class="{'edited':vm.table.filter.status>0}" ng-options="m.id as m.name for m in vm.filter.states"></select>
+                                ng-class="{'edited':vm.table.filter.city>0}" ng-options="m.id as m.name for m in vm.address.city"></select>
                         <div class="form-control-focus"> </div>
                     </div>
                 </div>
@@ -78,7 +43,9 @@
             <div class="col-xs-2">
                 <div class="form-group form-md-line-input has-info">
                     <div class="input-group input-group-sm">
-                      
+                        <div class="input-group-control">
+                            <input type="text" class="form-control input-sm" placeholder="商品名称" ng-model="vm.table.filter.name">
+                        </div>
                         <span class="input-group-btn btn-right">
                             <button ng-click="vm.init()" class="btn green-haze" type="button">查询</button>
                         </span>
@@ -87,42 +54,84 @@
             </div>
         </div>
         <div class="row">
+            <div class="col-xs-4">
+                <button class="btn btn-sm blue" ng-click="vm.time.today()"><i class="fa fa-plus"></i> 今天</button>
+                <button class="btn btn-sm blue" ng-click="vm.time.yesterday()"><i class="fa fa-plus"></i> 昨天</button>
+                <button class="btn btn-sm blue" ng-click="vm.time.less7()"><i class="fa fa-plus"></i> 最近七天</button>
+                <button class="btn btn-sm blue" ng-click="vm.time.less30()"><i class="fa fa-plus"></i> 最近30天</button>
+            </div>
+            <div class="col-xs-8">
+                <div class="col-xs-6">
+                    <div class="form-group form-md-line-input">
+                        <label class="col-md-3 control-label">开始时间:</label>
+                        <div class="col-md-9">
+                            <div class="dropdown dropdown1-parent">
+                                <a class="dropdown-toggle" id="dropdown1" role="button"
+                                   data-toggle="dropdown" data-target=".dropdown1-parent"
+                                   href="#">
+                                    <div class="input-group">
+                                        <input type="text" class="form-control" data-ng-model="vm.table.filter.start"
+                                               data-date-time-input="YYYY-MM-DD HH:mm">
+                                        <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+                                    </div>
+                                </a>
+                                <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
+                                    <datetimepicker data-ng-model="vm.table.filter.start"
+                                                    data-datetimepicker-config="{ dropdownSelector: '#dropdown1' }"></datetimepicker>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-6">
+                    <div class="form-group form-md-line-input">
+                        <label class="col-md-3 control-label">截至时间:</label>
+                        <div class="col-md-9">
+                            <div class="dropdown dropdown2-parent">
+                                <a class="dropdown-toggle" id="dropdown2" role="button"
+                                   data-toggle="dropdown" data-target=".dropdown2-parent"
+                                   href="#">
+                                    <div class="input-group">
+                                        <input type="text" class="form-control" data-ng-model="vm.table.filter.end"
+                                               data-date-time-input="YYYY-MM-DD HH:mm">
+                                        <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+                                    </div>
+                                </a>
+                                <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
+                                    <datetimepicker data-ng-model="vm.table.filter.end"
+                                                    data-datetimepicker-config="{ dropdownSelector: '#dropdown2' }"></datetimepicker>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+
+            </div>
+
+        </div>
+        <div class="row">
             <table st-table="vm.table.rows" class="table table-striped">
                 <thead>
                     <tr>
                         <th st-sort="a">销售数量</th>
                         <th>销售额</th>
                         <th>运费</th>
-                        <th>购买人数</th>
-                        <th>类别</th>
-                        <th>地区</th>
-                        <th>景区</th>
+                        <th>购买人次</th>
                         <th>省</th>
                         <th>市</th>
+                     
                     </tr>
                 </thead>
                 <tbody>
                     <tr st-select-row="row" st-select-mode="multiple" ng-repeat="row in vm.table.rows">
-                        <td>{{row.product_name}}</td>
-                        <td>{{row.online_time | timeChange}}</td>
-                        <td>{{row.product_price}}</td>
-                        <td>{{row.inventory}}</td>
-                        <td>{{row.product_type | arrayfilter:vm.filter.cates:row.product_type}}</td>
-                        <td>{{row.status==0?'下线':'上线'}}</td>
-                        <td>
-                            <a href="#" ng-click="vm.edit(row)">
-                                修改
-                            </a>
-                            <a ng-if="row.status==0" href="#" ng-click="vm.update(row,1)">
-                                上线
-                            </a>
-                            <a ng-if="row.status==1" href="#" ng-click="vm.update(row,0)">
-                                下线
-                            </a>
-                            <a href="#" ng-click="vm.delete(row)">
-                                删除
-                            </a>
-                        </td>
+                        <td>{{row.saleCount}}</td>
+                        <td>{{row.salePrice }}</td>
+                        <td>{{row.courier_cost}}</td>
+                        <td>1</td>
+                        <td>{{row.city_name}}</td>
+                        <td>{{row.city_name}}</td>
                     </tr>
                 </tbody>
                 <tfoot>
@@ -133,7 +142,6 @@
                     </tr>
                 </tfoot>
             </table>
-
 
         </div>
     </div>
