--- a/src/Trace/views/statistical/purchaserecords/index.html
+++ b/src/Trace/views/statistical/purchaserecords/index.html
@@ -2,10 +2,9 @@
     <div class="page-bar">
         <div class="col-xs-8">
             <ul class="page-breadcrumb">
-
                 <li>
                     <i class="fa fa-hand-o-right"></i>
-                    <a href="#">购买记录</a>
+                    <a href="#">购买记录-扫描</a>
                 </li>
             </ul>
         </div>
@@ -19,36 +18,25 @@
     </div>
     <div class="portlet light bordered">
         <div class="row">
-            <div class="col-xs-2">
+            <div class="col-xs-6">
                 <div class="form-group form-md-line-input">
-                    <label class="col-md-4 control-label">类别</label>
-                    <div class="col-md-8">
-                        <select ng-model="vm.table.filter.status"
-                                class="form-control edited" ui-validate="'$value>0'"
-                                ng-class="{'edited':vm.table.filter.status>0}" ng-options="m.id as m.name for m in vm.filter.states"></select>
+                    <label class="col-md-2 control-label">选择系列</label>
+                    <div class="col-md-4">
+                        <select ng-model="vm.table.filter.category1"
+                                class="form-control edited" ui-validate="'$value>0'" ng-change="vm.cate.change(1)"
+                                ng-class="{'edited':vm.table.filter.a>0}" ng-options="m.id as m.name for m in vm.cate.a"></select>
                         <div class="form-control-focus"> </div>
                     </div>
-                </div>
-            </div>
-
-            <div class="col-xs-2">
-                <div class="form-group form-md-line-input">
-                    <label class="col-md-4 control-label">地区</label>
-                    <div class="col-md-8">
-                        <select ng-model="vm.table.filter.status"
-                                class="form-control edited" ui-validate="'$value>0'"
-                                ng-class="{'edited':vm.table.filter.status>0}" ng-options="m.id as m.name for m in vm.filter.states"></select>
+                    <div class="col-md-3">
+                        <select ng-model="vm.table.filter.category2"
+                                class="form-control edited" ui-validate="'$value>0'" ng-change="vm.cate.change(2)"
+                                ng-class="{'edited':vm.table.filter.b>0}" ng-options="m.id as m.name for m in vm.cate.b"></select>
                         <div class="form-control-focus"> </div>
                     </div>
-                </div>
-            </div>
-            <div class="col-xs-2">
-                <div class="form-group form-md-line-input">
-                    <label class="col-md-4 control-label">景区</label>
-                    <div class="col-md-8">
-                        <select ng-model="vm.table.filter.status"
+                    <div class="col-md-3">
+                        <select ng-model="vm.table.filter.category3"
                                 class="form-control edited" ui-validate="'$value>0'"
-                                ng-class="{'edited':vm.table.filter.status>0}" ng-options="m.id as m.name for m in vm.filter.states"></select>
+                                ng-class="{'edited':vm.table.filter.c>0}" ng-options="m.id as m.name for m in vm.cate.c"></select>
                         <div class="form-control-focus"> </div>
                     </div>
                 </div>
@@ -57,9 +45,9 @@
                 <div class="form-group form-md-line-input">
                     <label class="col-md-4 control-label">省</label>
                     <div class="col-md-8">
-                        <select ng-model="vm.table.filter.status"
-                                class="form-control edited" ui-validate="'$value>0'"
-                                ng-class="{'edited':vm.table.filter.status>0}" ng-options="m.id as m.name for m in vm.filter.states"></select>
+                        <select ng-model="vm.table.filter.prov"
+                                class="form-control edited" ui-validate="'$value>0'" ng-change="vm.address.change()"
+                                ng-class="{'edited':vm.table.filter.prov>0}" ng-options="m.id as m.name for m in vm.address.prov"></select>
                         <div class="form-control-focus"> </div>
                     </div>
                 </div>
@@ -68,9 +56,9 @@
                 <div class="form-group form-md-line-input">
                     <label class="col-md-4 control-label">市</label>
                     <div class="col-md-8">
-                        <select ng-model="vm.table.filter.status"
+                        <select ng-model="vm.table.filter.city"
                                 class="form-control edited" ui-validate="'$value>0'"
-                                ng-class="{'edited':vm.table.filter.status>0}" ng-options="m.id as m.name for m in vm.filter.states"></select>
+                                ng-class="{'edited':vm.table.filter.city>0}" ng-options="m.id as m.name for m in vm.address.city"></select>
                         <div class="form-control-focus"> </div>
                     </div>
                 </div>
@@ -89,6 +77,65 @@
             </div>
         </div>
         <div class="row">
+            <div class="col-xs-4">
+                <button class="btn btn-sm blue" ng-click="vm.time.today()"><i class="fa fa-plus"></i> 今天</button>
+                <button class="btn btn-sm blue" ng-click="vm.time.yesterday()"><i class="fa fa-plus"></i> 昨天</button>
+                <button class="btn btn-sm blue" ng-click="vm.time.less7()"><i class="fa fa-plus"></i> 最近七天</button>
+                <button class="btn btn-sm blue" ng-click="vm.time.less30()"><i class="fa fa-plus"></i> 最近30天</button>
+            </div>
+            <div class="col-xs-8">
+
+                <div class="col-xs-6">
+                    <div class="form-group form-md-line-input">
+                        <label class="col-md-3 control-label">开始时间:</label>
+                        <div class="col-md-9">
+                            <div class="dropdown dropdown1-parent">
+                                <a class="dropdown-toggle" id="dropdown1" role="button"
+                                   data-toggle="dropdown" data-target=".dropdown1-parent"
+                                   href="#">
+                                    <div class="input-group">
+                                        <input type="text" class="form-control" data-ng-model="vm.table.filter.start"
+                                               data-date-time-input="YYYY-MM-DD HH:mm">
+                                        <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+                                    </div>
+                                </a>
+                                <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
+                                    <datetimepicker data-ng-model="vm.table.filter.start"
+                                                    data-datetimepicker-config="{ dropdownSelector: '#dropdown1' }"></datetimepicker>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-6">
+                    <div class="form-group form-md-line-input">
+                        <label class="col-md-3 control-label">截至时间:</label>
+                        <div class="col-md-9">
+                            <div class="dropdown dropdown2-parent">
+                                <a class="dropdown-toggle" id="dropdown2" role="button"
+                                   data-toggle="dropdown" data-target=".dropdown2-parent"
+                                   href="#">
+                                    <div class="input-group">
+                                        <input type="text" class="form-control" data-ng-model="vm.table.filter.end"
+                                               data-date-time-input="YYYY-MM-DD HH:mm">
+                                        <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+                                    </div>
+                                </a>
+                                <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
+                                    <datetimepicker data-ng-model="vm.table.filter.end"
+                                                    data-datetimepicker-config="{ dropdownSelector: '#dropdown2' }"></datetimepicker>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+
+            </div>
+
+        </div>
+        <div class="row">
             <table st-table="vm.table.rows" class="table table-striped">
                 <thead>
                     <tr>
@@ -105,26 +152,16 @@
                 </thead>
                 <tbody>
                     <tr st-select-row="row" st-select-mode="multiple" ng-repeat="row in vm.table.rows">
-                        <td>{{row.product_name}}</td>
-                        <td>{{row.online_time | timeChange}}</td>
-                        <td>{{row.product_price}}</td>
-                        <td>{{row.inventory}}</td>
-                        <td>{{row.product_type | arrayfilter:vm.filter.cates:row.product_type}}</td>
-                        <td>{{row.status==0?'下线':'上线'}}</td>
-                        <td>
-                            <a href="#" ng-click="vm.edit(row)">
-                                修改
-                            </a>
-                            <a ng-if="row.status==0" href="#" ng-click="vm.update(row,1)">
-                                上线
-                            </a>
-                            <a ng-if="row.status==1" href="#" ng-click="vm.update(row,0)">
-                                下线
-                            </a>
-                            <a href="#" ng-click="vm.delete(row)">
-                                删除
-                            </a>
-                        </td>
+                        <td>{{row.productName}}</td>
+                        <td>{{row.price }}</td>
+                        <td>{{row.receiver}}</td>
+                        <td>{{row.create_time | timeChange}}</td>
+                        <td>{{row.cate1}}</td>
+                        <td>{{row.cate2}}</td>
+                        <td>{{row.cate3}}</td>
+                        <td>{{row.address}}</td>
+                        <td>{{row.city_name}}</td>
+
                     </tr>
                 </tbody>
                 <tfoot>
@@ -135,7 +172,6 @@
                     </tr>
                 </tfoot>
             </table>
-
 
         </div>
     </div>
