--- a/src/Trace/views/statistical/purchaserecords/index.html
+++ b/src/Trace/views/statistical/purchaserecords/index.html
@@ -4,14 +4,14 @@
             <ul class="page-breadcrumb">
                 <li>
                     <i class="fa fa-hand-o-right"></i>
-                    <a href="#">购买记录-扫描</a>
+                    <a href="#">购买记录</a>
                 </li>
             </ul>
         </div>
         <div class="col-xs-4 right">
             <ul class="page-breadcrumb" style="float: right">
                 <li>
-                    <button class="btn btn-sm blue" ng-click="vm.export()"><i class="fa fa-plus"></i> 导出</button>
+                    <button class="btn btn-sm blue" ng-click="vm.export()"> 导出</button>
                 </li>
             </ul>
         </div>
@@ -78,10 +78,10 @@
         </div>
         <div class="row">
             <div class="col-xs-4">
-                <button class="btn btn-sm blue" ng-click="vm.time.today()"><i class="fa fa-plus"></i> 今天</button>
-                <button class="btn btn-sm blue" ng-click="vm.time.yesterday()"><i class="fa fa-plus"></i> 昨天</button>
-                <button class="btn btn-sm blue" ng-click="vm.time.less7()"><i class="fa fa-plus"></i> 最近七天</button>
-                <button class="btn btn-sm blue" ng-click="vm.time.less30()"><i class="fa fa-plus"></i> 最近30天</button>
+                <button class="btn btn-sm blue" ng-click="vm.time.today()"> 今天</button>
+                <button class="btn btn-sm blue" ng-click="vm.time.yesterday()"> 昨天</button>
+                <button class="btn btn-sm blue" ng-click="vm.time.less7()"> 最近七天</button>
+                <button class="btn btn-sm blue" ng-click="vm.time.less30()"> 最近30天</button>
             </div>
             <div class="col-xs-8">
 
