--- a/src/Trace/views/statistical/purchasescan/index.html
+++ b/src/Trace/views/statistical/purchasescan/index.html
@@ -41,28 +41,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-xs-2">
-                <div class="form-group form-md-line-input">
-                    <label class="col-md-4 control-label">省</label>
-                    <div class="col-md-8">
-                        <select ng-model="vm.table.filter.prov"
-                                class="form-control edited" ui-validate="'$value>0'" ng-change="vm.address.change()"
-                                ng-class="{'edited':vm.table.filter.prov>0}" ng-options="m.id as m.name for m in vm.address.prov"></select>
-                        <div class="form-control-focus"> </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-xs-2">
-                <div class="form-group form-md-line-input">
-                    <label class="col-md-4 control-label">市</label>
-                    <div class="col-md-8">
-                        <select ng-model="vm.table.filter.city"
-                                class="form-control edited" ui-validate="'$value>0'"
-                                ng-class="{'edited':vm.table.filter.city>0}" ng-options="m.id as m.name for m in vm.address.city"></select>
-                        <div class="form-control-focus"> </div>
-                    </div>
-                </div>
-            </div>
+           
             <div class="col-xs-2">
                 <div class="form-group form-md-line-input has-info">
                     <div class="input-group input-group-sm">
@@ -78,13 +57,12 @@
         </div>
         <div class="row">
             <div class="col-xs-4">
-                <button class="btn btn-sm blue" ng-click="vm.time.today()"><i class="fa fa-plus"></i> 今天</button>
-                <button class="btn btn-sm blue" ng-click="vm.time.yesterday()"><i class="fa fa-plus"></i> 昨天</button>
-                <button class="btn btn-sm blue" ng-click="vm.time.less7()"><i class="fa fa-plus"></i> 最近七天</button>
-                <button class="btn btn-sm blue" ng-click="vm.time.less30()"><i class="fa fa-plus"></i> 最近30天</button>
+                <button class="btn btn-sm blue" ng-click="vm.time.today()"> 今天</button>
+                <button class="btn btn-sm blue" ng-click="vm.time.yesterday()"> 昨天</button>
+                <button class="btn btn-sm blue" ng-click="vm.time.less7()"> 最近七天</button>
+                <button class="btn btn-sm blue" ng-click="vm.time.less30()"> 最近30天</button>
             </div>
             <div class="col-xs-8">
-
                 <div class="col-xs-6">
                     <div class="form-group form-md-line-input">
                         <label class="col-md-3 control-label">开始时间:</label>
@@ -154,19 +132,18 @@
                     <tr st-select-row="row" st-select-mode="multiple" ng-repeat="row in vm.table.rows">
                         <td>{{row.productName}}</td>
                         <td>{{row.price }}</td>
-                        <td>{{row.receiver}}</td>
+                        <td>{{row.nick_name}}</td>
                         <td>{{row.create_time | timeChange}}</td>
                         <td>{{row.cate1}}</td>
                         <td>{{row.cate2}}</td>
                         <td>{{row.cate3}}</td>
-                        <td>{{row.address}}</td>
-                        <td>{{row.city_name}}</td>
-
+                        <td>{{row.province}}</td>
+                        <td>{{row.city}}</td>
                     </tr>
                 </tbody>
                 <tfoot>
                     <tr>
-                        <td colspan="7">
+                        <td colspan="9">
                             <div pagination conf="vm.table.pageConfig"></div>
                         </td>
                     </tr>
