--- a/src/Trace/views/statistical/overview/index.html
+++ b/src/Trace/views/statistical/overview/index.html
@@ -4,7 +4,7 @@
             <ul class="page-breadcrumb">
                 <li>
                     <i class="fa fa-hand-o-right"></i>
-                    <a href="#">概述</a>
+                    <a href="#">统计项目</a>
                 </li>
             </ul>
         </div>
